--- a/misas-thai-street-cuisine-2.0/Pages/FinalizeOrder.razor.css
+++ b/misas-thai-street-cuisine-2.0/Pages/FinalizeOrder.razor.css
@@ -89,7 +89,6 @@
 }
 .form-group label {
     font-weight: bold;
-    font-size: 1.2rem;
     margin-bottom: 0.5rem;
     display: block;
     color: #333;
@@ -128,7 +127,19 @@
 .delivery-address-section {
     margin-bottom: 1rem;
 }
-
+.delivery-address-section label {
+    font-weight: bold;
+    margin-bottom: 0.5rem;
+    display: block;
+    color: #333;
+}
+.card-info-label {
+    font-size: 1rem;
+    font-weight: bold;
+    margin-bottom: 0.5rem;
+    display: block;
+    color: #333;
+}
 .address-fields {
     display: flex;
     flex-direction: column;
