--- a/misas-thai-street-cuisine-2.0/Pages/Finalize.razor
+++ b/misas-thai-street-cuisine-2.0/Pages/Finalize.razor
@@ -327,7 +327,7 @@
                 }
                 
                 // Clear the cart and move to confirmation
-                Cart.ClearCart();
+                await Cart.ClearCartAsync();
                 currentStep = 2;
             }
             else
